# QuantLabCPP

./: .gitignore  LICENSE
QuantLabCPP/: .gitignore  CMakeLists.txt  README.md  requirements.txt
QuantLabCPP/include/: backtester.h  csv_loader.h  factor_engine.h  logger.h  portfolio.h  strategy.h  types.h
QuantLabCPP/scripts/: build.sh
QuantLabCPP/src/: main.cpp
QuantLabCPP/src/backtester/: event_driven_backtester.cpp
QuantLabCPP/src/data/: csv_loader.cpp
QuantLabCPP/src/factors/: trend_factors.cpp  volatility_factors.cpp  volume_risk_factors.cpp
QuantLabCPP/src/portfolio/: equal_weight.cpp  optimization.cpp
QuantLabCPP/src/strategies/: base_strategy.cpp
QuantLabCPP/src/utils/: helpers.cpp  logger.cpp
QuantLabCPP/tests/: test_all.cpp
